fix: 배치 단위로 movieId 리스트에 대해 키워드 이름을 한 번에 조회하여 맵핑 후 사용