@@ -1,7 +1,6 @@
 package com.duck.moodflix.movie.service;
 
 import com.duck.moodflix.movie.domain.entity.Movie;
-import com.duck.moodflix.movie.domain.entity.MovieKeyword;
 import com.duck.moodflix.movie.search.MovieDoc;
 import com.duck.moodflix.movie.util.HangulUtils;
 import lombok.RequiredArgsConstructor;
@@ -10,8 +9,11 @@ import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.IndexOperations;
 import org.springframework.stereotype.Service;
 
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,6 +22,9 @@ import java.util.stream.Collectors;
 public class MovieIndexService {
 
     private final ElasticsearchOperations esOps;
+
+    @PersistenceContext
+    private EntityManager em;
 
     /** 대량 색인: 안전하게 배치로 나눠 저장 + 저장 직후 refresh */
     public void indexMovies(List<Movie> movies) {
@@ -31,19 +36,36 @@ public class MovieIndexService {
         int from = 0, total = 0;
         while (from < movies.size()) {
             int to = Math.min(from + BATCH, movies.size());
+
+            // 1) 이번 배치의 movieId 수집
+            List<Long> ids = new ArrayList<>(to - from);
+            for (int i = from; i < to; i++) {
+                Movie m = movies.get(i);
+                if (m != null && m.getId() != null) {
+                    ids.add(m.getId());
+                }
+            }
+
+            // 2) 배치 키워드 일괄 조회: movieId -> List<String>
+            Map<Long, List<String>> kwsMap = fetchKeywordNames(ids);
+
+            // 3) 문서화
             List<MovieDoc> docs = new ArrayList<>(to - from);
             for (int i = from; i < to; i++) {
                 Movie m = movies.get(i);
                 if (m == null) continue;
-                docs.add(toDoc(m));
+                List<String> kws = kwsMap.getOrDefault(m.getId(), List.of());
+                docs.add(toDoc(m, kws));
             }
 
+            // 4) 색인 + refresh
             if (!docs.isEmpty()) {
                 log.info("[ES] indexing batch: {} docs ({} ~ {})", docs.size(), from, to - 1);
-                esOps.save(docs);                 // 벌크 저장
-                io.refresh();                     // ✅ 즉시 검색/카운트 반영
+                esOps.save(docs);
+                io.refresh(); // 즉시 검색/카운트 반영
                 total += docs.size();
             }
+
             from = to;
         }
         log.info("[ES] indexing done. total={}", total);
@@ -52,23 +74,49 @@ public class MovieIndexService {
     /** 단건 색인: 저장 직후 refresh */
     public void indexMovie(Movie m) {
         if (m == null) return;
-        esOps.save(toDoc(m));
-        esOps.indexOps(MovieDoc.class).refresh(); // ✅
+
+        // 단건일 때도 키워드 쿼리로 안전하게 조회
+        List<String> kws = (m.getId() == null)
+                ? List.of()
+                : fetchKeywordNames(List.of(m.getId())).getOrDefault(m.getId(), List.of());
+
+        esOps.save(toDoc(m, kws));
+        esOps.indexOps(MovieDoc.class).refresh();
     }
 
-    private MovieDoc toDoc(Movie m) {
+    /** 배치로 영화 키워드 이름 일괄 조회 (N+1 / LAZY 회피) */
+    private Map<Long, List<String>> fetchKeywordNames(List<Long> movieIds) {
+        if (movieIds == null || movieIds.isEmpty()) return Map.of();
+
+        // JPQL: MovieKeyword(mk) → Keyword(k) 이름을 movieId별로 모음
+        var q = em.createQuery("""
+            select mk.movie.id, k.name
+            from MovieKeyword mk
+            join mk.keyword k
+            where mk.movie.id in :ids
+        """, Object[].class);
+        q.setParameter("ids", movieIds);
+
+        List<Object[]> rows = q.getResultList();
+        return rows.stream().collect(Collectors.groupingBy(
+                r -> (Long) r[0],
+                Collectors.mapping(r -> {
+                    String name = (String) r[1];
+                    return (name == null) ? "" : name.trim();
+                }, Collectors.filtering(s -> s != null && !s.isBlank(), Collectors.toList()))
+        ));
+    }
+
+    private MovieDoc toDoc(Movie m, List<String> keywordNames) {
         String title = (m.getTitle() == null) ? "" : m.getTitle();
         String choseong = HangulUtils.toChoseongKey(title);
 
-        List<String> kws = (m.getMovieKeywords() == null)
-                ? List.of()
-                : m.getMovieKeywords().stream()
-                .map(MovieKeyword::getKeyword)
-                .filter(k -> k != null && k.getName() != null && !k.getName().isBlank())
-                .map(k -> k.getName().trim())
+        List<String> kws = (keywordNames == null ? List.<String>of() : keywordNames).stream()
+                .filter(s -> s != null && !s.isBlank())
+                .map(String::trim)
                 .distinct()
                 .limit(50)
-                .collect(Collectors.toList());
+                .toList();
 
         Double popularity = (m.getPopularity() == null) ? 0.0 : m.getPopularity();
         Double voteAvg    = (m.getVoteAverage() == null) ? 0.0 : m.getVoteAverage();
